// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot, state derived from props, DISCONNECTED 1`] = `
.c20 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c19 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c21 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c21 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c21:focus,
.c21:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c7 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.55rem 1.5rem 0.6rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c10 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c12 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c13 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c8 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c9 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c17 {
  text-align: center;
  color: #f94c4c;
  visibility: visible;
}

.c16 {
  font-size: 11px;
  opacity: 0.59;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c5 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
  -webkit-transition: margin-right 0.2s;
  transition: margin-right 0.2s;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .sc-fzoydu {
  opacity: 0.75;
}

.c0:hover .c4 {
  margin-right: 0;
}

.c0:hover .sc-fzoJMP {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.sc-fzpmMD .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="sc-fzqAui c0"
>
  <div
    className="sc-fznAgC c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4 c5"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                SELL
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c14"
        >
          <i
            aria-hidden="true"
            className="c15 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c16"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c17 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                BUY
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c18"
      >
        <div
          className="c19"
        >
          <span
            className="c20"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c21"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ canRequest 1`] = `
.c23 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c22 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c24 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c24 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c24:focus,
.c24:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c7 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.55rem 1.5rem 0.6rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c10 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c12 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c13 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c8 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c9 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  text-align: center;
  color: #a1a5af;
  visibility: hidden;
}

.c17 {
  text-align: center;
  color: #a1a5af;
  visibility: visible;
}

.c16 {
  font-size: 11px;
  opacity: 0.59;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c18 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 9px;
  padding-right: 10px;
  padding-bottom: 8px;
  padding-top: 8px;
  position: absolute;
  border-radius: 3px;
  background: #5f94f5;
  pointer-events: auto;
  width: 58px;
  cursor: pointer;
}

.c19 rect {
  fill: #ffffff;
}

.c20 {
  color: #ffffff;
  font-size: 0.6875rem;
}

.c5 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
  -webkit-transition: margin-right 0.2s;
  transition: margin-right 0.2s;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .sc-fzoydu {
  opacity: 0.75;
}

.c0:hover .c4 {
  margin-right: 0;
}

.c0:hover .sc-fzoJMP {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.sc-fzpmMD .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c19 {
    width: 60px;
  }
}

@media (min-width:401px) {
  .c19 {
    width: 64px;
  }
}

<div
  className="sc-fzqAui c0"
>
  <div
    className="sc-fznAgC c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4 c5"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                SELL
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c14"
        >
          <i
            aria-hidden="true"
            className="c15 fas fa-caret-up"
            color="none"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c16"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c17 fas fa-caret-down"
            color="none"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c18"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c19"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c20"
              data-qa="tile-booking__booking-status"
            >
              Initiate RFQ
            </span>
          </div>
        </div>
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                BUY
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c21"
      >
        <div
          className="c22"
        >
          <span
            className="c23"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c24"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ expired 1`] = `
.c24 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c23 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c25 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c25 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c25:focus,
.c25:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c7 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.6rem 1.5rem 0.4rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c10 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c12 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c13 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c8 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c9 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c14 {
  color: #f94c4c;
  font-size: 9px;
  text-transform: uppercase;
}

.c16 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c18 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c17 {
  font-size: 11px;
  opacity: 0.59;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c19 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 9px;
  padding-right: 10px;
  padding-bottom: 8px;
  padding-top: 8px;
  position: absolute;
  border-radius: 3px;
  background: #5f94f5;
  pointer-events: auto;
  width: 58px;
  cursor: pointer;
}

.c20 rect {
  fill: #ffffff;
}

.c21 {
  color: #ffffff;
  font-size: 0.6875rem;
}

.c5 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
  -webkit-transition: margin-right 0.2s;
  transition: margin-right 0.2s;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .sc-fzoydu {
  opacity: 0.75;
}

.c0:hover .c4 {
  margin-right: 0;
}

.c0:hover .sc-fzoJMP {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.sc-fzpmMD .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c20 {
    width: 60px;
  }
}

@media (min-width:401px) {
  .c20 {
    width: 64px;
  }
}

<div
  className="sc-fzqAui c0"
>
  <div
    className="sc-fznAgC c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4 c5"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                SELL
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="c14"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
        <div
          className="c15"
        >
          <i
            aria-hidden="true"
            className="c16 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c17"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c18 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c19"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c20"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c21"
              data-qa="tile-booking__booking-status"
            >
              Requote
            </span>
          </div>
        </div>
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                BUY
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="c14"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c22"
      >
        <div
          className="c23"
        >
          <span
            className="c24"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c25"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ received 1`] = `
.c21 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c20 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c22 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c22 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c22:focus,
.c22:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c7 {
  background-color: #2e3543;
  border-radius: 3px;
  color: #f94c4c;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.55rem 1.5rem 0.6rem 1.5rem;
  margin-bottom: 2px;
  -webkit-animation: eJClnE 5s;
  animation: eJClnE 5s;
}

.spot-tile:hover .c7 {
  background-color: #272d3a;
}

.spot-tile:hover .c7:hover {
  background-color: #f94c4c;
  color: #ffffff;
}

.c7:hover {
  background-color: #f94c4c;
  color: #ffffff;
}

.c18 {
  background-color: #2e3543;
  border-radius: 3px;
  color: #5f94f5;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.55rem 1.5rem 0.6rem 1.5rem;
  margin-bottom: 2px;
  -webkit-animation: eNgZhw 5s;
  animation: eNgZhw 5s;
}

.spot-tile:hover .c18 {
  background-color: #272d3a;
}

.spot-tile:hover .c18:hover {
  background-color: #5f94f5;
  color: #ffffff;
}

.c18:hover {
  background-color: #5f94f5;
  color: #ffffff;
}

.c10 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c12 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c13 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c8 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c17 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c16 {
  font-size: 11px;
  opacity: 0.59;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c5 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
  -webkit-transition: margin-right 0.2s;
  transition: margin-right 0.2s;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .sc-fzoydu {
  opacity: 0.75;
}

.c0:hover .c4 {
  margin-right: 0;
}

.c0:hover .sc-fzoJMP {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.sc-fzpmMD .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="sc-fzqAui c0"
>
  <div
    className="sc-fznAgC c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4 c5"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={false}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                SELL
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c14"
        >
          <i
            aria-hidden="true"
            className="c15 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c16"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c17 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="c18"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={false}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                BUY
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c19"
      >
        <div
          className="c20"
        >
          <span
            className="c21"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c22"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ requested 1`] = `
.c22 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c21 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c23 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c23 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c23:focus,
.c23:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c14 {
  text-align: center;
  color: #a1a5af;
  visibility: hidden;
}

.c16 {
  text-align: center;
  color: #a1a5af;
  visibility: visible;
}

.c15 {
  font-size: 11px;
  opacity: 0.59;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c9 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.48s;
  animation-delay: -0.48s;
  fill: #fff;
  will-change: transform;
}

.c10 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.3261538461538461s;
  animation-delay: -0.3261538461538461s;
  fill: #fff;
  will-change: transform;
}

.c11 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.17230769230769227s;
  animation-delay: -0.17230769230769227s;
  fill: #fff;
  will-change: transform;
}

.c12 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.018461538461538418s;
  animation-delay: -0.018461538461538418s;
  fill: #fff;
  will-change: transform;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  border: 2px solid #272d3a;
  border-radius: 3px;
  font-size: 10px;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  height: 58px;
  min-height: 2rem;
  max-height: 3.7rem;
  margin-bottom: 1px;
  min-width: 125px;
  line-height: normal;
  opacity: 0.5;
  text-align: center;
  text-transform: uppercase;
}

.c8 {
  margin: 0 3px;
}

.c17 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 9px;
  padding-right: 10px;
  padding-bottom: 8px;
  padding-top: 8px;
  position: absolute;
  border-radius: 3px;
  background: #f94c4c;
  pointer-events: auto;
  width: 58px;
  cursor: pointer;
}

.c18 rect {
  fill: #ffffff;
}

.c19 {
  color: #ffffff;
  font-size: 0.6875rem;
}

.c5 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
  -webkit-transition: margin-right 0.2s;
  transition: margin-right 0.2s;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .sc-fzoydu {
  opacity: 0.75;
}

.c0:hover .c4 {
  margin-right: 0;
}

.c0:hover .sc-fzoJMP {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.sc-fzpmMD .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c18 {
    width: 60px;
  }
}

@media (min-width:401px) {
  .c18 {
    width: 64px;
  }
}

<div
  className="sc-fzqAui c0"
>
  <div
    className="sc-fznAgC c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4 c5"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="c8"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="c9"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="c10"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="c11"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="c12"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
        <div
          className="c13"
        >
          <i
            aria-hidden="true"
            className="c14 fas fa-caret-up"
            color="none"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c15"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c16 fas fa-caret-down"
            color="none"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c17"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c18"
            color="red"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c19"
              data-qa="tile-booking__booking-status"
            >
              Cancel RFQ
            </span>
          </div>
        </div>
        <div
          className="c7"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="c8"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="c9"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="c10"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="c11"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="c12"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c20"
      >
        <div
          className="c21"
        >
          <span
            className="c22"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c23"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, defaults, RFQ none, should be able to excute 1`] = `
.c21 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c20 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c22 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
}

.spot-tile:hover .c22 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c22:focus,
.c22:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c7 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.55rem 1.5rem 0.6rem 1.5rem;
  margin-bottom: 2px;
}

.spot-tile:hover .c7 {
  background-color: #272d3a;
}

.spot-tile:hover .c7:hover {
  background-color: #f94c4c;
  color: #ffffff;
}

.c7:hover {
  background-color: #f94c4c;
  color: #ffffff;
}

.c18 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.55rem 1.5rem 0.6rem 1.5rem;
  margin-bottom: 2px;
}

.spot-tile:hover .c18 {
  background-color: #272d3a;
}

.spot-tile:hover .c18:hover {
  background-color: #5f94f5;
  color: #ffffff;
}

.c18:hover {
  background-color: #5f94f5;
  color: #ffffff;
}

.c10 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c12 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c13 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c8 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c17 {
  text-align: center;
  color: #f94c4c;
  visibility: visible;
}

.c16 {
  font-size: 11px;
  opacity: 0.59;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c5 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
  -webkit-transition: margin-right 0.2s;
  transition: margin-right 0.2s;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .sc-fzoydu {
  opacity: 0.75;
}

.c0:hover .c4 {
  margin-right: 0;
}

.c0:hover .sc-fzoJMP {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.sc-fzpmMD .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="sc-fzqAui c0"
>
  <div
    className="sc-fznAgC c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4 c5"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={false}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                SELL
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c14"
        >
          <i
            aria-hidden="true"
            className="c15 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c16"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c17 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="c18"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={false}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                BUY
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c19"
      >
        <div
          className="c20"
        >
          <span
            className="c21"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c22"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, in trade 1`] = `
.c28 {
  grid-area: Currency;
  opacity: 0.59;
  font-size: 0.625rem;
  line-height: 1.2rem;
}

.c27 {
  display: grid;
  grid-template-columns: 30px auto 30px;
  grid-template-areas: 'Currency Input ResetInputValue' '. Message .';
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-rows: 23px 0;
}

.c29 {
  grid-area: Input;
  background: none;
  text-align: center;
  outline: none;
  border: none;
  font-size: 0.75rem;
  width: 80px;
  padding: 2px 0;
  opacity: 0.3;
}

.spot-tile:hover .c29 {
  box-shadow: 0px 1px 0px #fff;
}

.spot-tile:hover .c29:focus,
.c29:focus {
  box-shadow: 0px 1px 0px #5f94f5;
}

.c7 {
  background-color: #2e3543;
  border-radius: 3px;
  color: inherit;
  -webkit-transition: background-color 0.2s ease;
  transition: background-color 0.2s ease;
  cursor: pointer;
  border: none;
  outline: none;
  height: 59px;
  min-width: 125px;
  padding: 0.55rem 1.5rem 0.6rem 1.5rem;
  margin-bottom: 2px;
  cursor: initial;
  pointer-events: none;
}

.c10 {
  padding: 0;
  margin: 0;
  opacity: 0.59;
  margin: 0 0 0.125rem 0;
  font-size: 0.625rem;
}

.c11 {
  padding: 0;
  margin: 0;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c12 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.5rem;
  margin: 0 0.125rem;
}

.c13 {
  padding: 0;
  margin: 0;
  margin: 0.125rem 0;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
}

.c8 {
  height: 2.1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0.3;
}

.c9 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  text-align: center;
  color: #28c988;
  visibility: hidden;
}

.c17 {
  text-align: center;
  color: #f94c4c;
  visibility: hidden;
}

.c16 {
  font-size: 11px;
  opacity: 0.59;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  z-index: 1;
}

.c21 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.48s;
  animation-delay: -0.48s;
  fill: #fff;
  will-change: transform;
}

.c22 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.3261538461538461s;
  animation-delay: -0.3261538461538461s;
  fill: #fff;
  will-change: transform;
}

.c23 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.17230769230769227s;
  animation-delay: -0.17230769230769227s;
  fill: #fff;
  will-change: transform;
}

.c24 {
  -webkit-animation: kpOBsK 0.8s infinite;
  animation: kpOBsK 0.8s infinite;
  -webkit-animation-delay: -0.018461538461538418s;
  animation-delay: -0.018461538461538418s;
  fill: #fff;
  will-change: transform;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 15px;
  position: relative;
}

.c18 {
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  text-align: center;
  z-index: 2;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 9px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-top: 10px;
  position: absolute;
  border-radius: 17px;
  background: #5f94f5;
  pointer-events: auto;
  width: 125px;
  cursor: pointer;
}

.c19 rect {
  fill: #ffffff;
}

.c25 {
  color: #ffffff;
  font-size: 0.8125rem;
}

.c20 {
  padding-right: 0.375rem;
  padding-top: 0.04rem;
}

.c5 {
  color: #fff;
  font-size: 0.625rem;
  line-height: 1rem;
  opacity: 0.59;
  margin-left: auto;
  -webkit-transition: margin-right 0.2s;
  transition: margin-right 0.2s;
}

.c3 {
  color: #fff;
  font-size: 0.8125rem;
  line-height: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  color: #fff;
  position: relative;
  min-height: 11rem;
  height: 100%;
}

.c0:hover .sc-fzoydu {
  opacity: 0.75;
}

.c0:hover .c4 {
  margin-right: 0;
}

.c0:hover .sc-fzoJMP {
  opacity: 0.75;
}

.c1 {
  position: absolute;
  height: 100%;
  width: 100%;
  border-radius: 3px;
  padding: 1.25rem;
  box-sizing: border-box;
  background-color: #2e3543;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.sc-fzpmMD .c1 {
  border-radius: 0px;
}

.c1:hover {
  background-color: #3d4455;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (min-width:321px) {
  .c19 {
    width: 125px;
  }
}

@media (min-width:401px) {
  .c19 {
    width: 125px;
  }
}

<div
  className="sc-fzqAui c0"
>
  <div
    className="sc-fznAgC c1 spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className=""
    >
      <div
        className="c2"
      >
        <div
          className="c3"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="c4 c5"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                SELL
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="c14"
        >
          <i
            aria-hidden="true"
            className="c15 fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="c16"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="c17 fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="c18"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="c19"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="c20"
            >
              <svg
                data-qa="adaptive-loader__svg"
                height={14}
                width={14}
              >
                <rect
                  className="c21"
                  height={10.5}
                  order={0}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={0.25}
                />
                <rect
                  className="c22"
                  height={10.5}
                  order={1}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={3.875}
                />
                <rect
                  className="c23"
                  height={10.5}
                  order={2}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={7.5}
                />
                <rect
                  className="c24"
                  height={10.5}
                  order={3}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={11.125}
                />
              </svg>
            </span>
            <span
              className="c25"
              data-qa="tile-booking__booking-status"
            >
              Executing
            </span>
          </div>
        </div>
        <button
          className="c7"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="c8"
            disabled={true}
          >
            <div
              className="c9"
            >
              <div
                className="sc-AxheI c10"
              >
                BUY
              </div>
              <div
                className="sc-AxheI c11"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-AxheI c12"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-AxheI c13"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className="c26"
      >
        <div
          className="c27"
        >
          <span
            className="c28"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="c29"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
